--- a/frontapi/package.json
+++ b/frontapi/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "typescript": "^4.7.4",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "css-select": "^5.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
