--- a/backapi/package.json
+++ b/backapi/package.json
@@ -31,9 +31,11 @@
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/sequelize": "^0.1.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^9.0.11",
     "apollo-server-express": "^3.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
