--- a/frontapi/package.json
+++ b/frontapi/package.json
@@ -16,6 +16,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
