--- a/frontapi/package.json
+++ b/frontapi/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
