--- a/backapi/package.json
+++ b/backapi/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^9.0.11",
     "apollo-server-express": "^3.7.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -62,6 +63,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^7.5.5",
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
